--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
         <!--[if lt IE 9]> HTML5Shiv
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <script type="text/javascript" src="load_speed_testing.js"></script>
  
     </head>
     <body>
-        What a body
+        <img id="masterimage" src="http://upload.wikimedia.org/wikipedia/commons/6/66/Oberer_Vinschgau_Mals_01.jpg">
+        About 2MB
     </body>
 </html>
