Changed shown picture

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  
     </head>
     <body>
-        <img id="masterimage" src="http://upload.wikimedia.org/wikipedia/commons/6/66/Oberer_Vinschgau_Mals_01.jpg">
-        About 2MB
+        <img id="masterimage" src="http://www.aaoe.fr/public/MC/MC11/Satyrium_XXX.bmp">
+        About 504 KB
     </body>
 </html>
