--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
         <!--[if lt IE 9]> HTML5Shiv
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <script type="text/javascript" src="benchmarkwebstorage.js"></script>
+        <script type="text/javascript" src="benchmarkindexeddb.js"></script>
         <script type="text/javascript" src="load_speed_testing.js"></script>
  
     </head>
     <body>
-        <img id="masterimage" src="http://www.aaoe.fr/public/MC/MC11/Satyrium_XXX.bmp">
+        <!-- <img id="masterimage" src="http://www.aaoe.fr/public/MC/MC11/Satyrium_XXX.bmp"> -->
         About 504 KB
     </body>
 </html>
