Benchmarking for File API. Not done.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <![endif]-->
         <script type="text/javascript" src="benchmarkwebstorage.js"></script>
         <script type="text/javascript" src="benchmarkindexeddb.js"></script>
+        <script type="text/javascript" src="benchmarkfileapi.js"></script>
         <script type="text/javascript" src="load_speed_testing.js"></script>
  
     </head>
