Add initial version of websql

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <script type="text/javascript" src="benchmarkwebstorage.js"></script>
         <script type="text/javascript" src="benchmarkindexeddb.js"></script>
         <script type="text/javascript" src="benchmarkfileapi.js"></script>
+        <script type="text/javascript" src="benchmarkwebsql.js"></script>
         <script type="text/javascript" src="load_speed_testing.js"></script>
+
  
     </head>
     <body>
