Sequential runs, graphing

--- a/index.html
+++ b/index.html
@@ -16,12 +16,20 @@
         <script type="text/javascript" src="benchmarkindexeddb.js"></script>
         <script type="text/javascript" src="benchmarkfileapi.js"></script>
         <script type="text/javascript" src="benchmarkwebsql.js"></script>
+        <script src="rickshaw/vendor/d3.min.js"></script> 
+        <script src="rickshaw/vendor/d3.layout.min.js"></script> 
+        <link rel="stylesheet" type="text/css" href="rickshaw/rickshaw.css">
+        <script type="text/javascript" src="rickshaw/rickshaw.js"></script>
         <script type="text/javascript" src="load_speed_testing.js"></script>
 
  
     </head>
     <body>
         <!-- <img id="masterimage" src="http://www.aaoe.fr/public/MC/MC11/Satyrium_XXX.bmp"> -->
-        About 504 KB
+        <!-- About 504 KB -->
+        <div id="webStoreGraph"></div>
+        <div id="indexedDBGraph"></div>
+        <div id="webSQLGraph"></div>
+        <div id="fileAPIGraph"></div>
     </body>
 </html>
