Added titles to graphs

--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
     <body>
         <!-- <img id="masterimage" src="http://www.aaoe.fr/public/MC/MC11/Satyrium_XXX.bmp"> -->
         <!-- About 504 KB -->
-        <div id="webStoreGraph"></div>
+            <p>Web Storage</p>
+        <div id="webStoreGraph">
+        </div>
+        <p>IndexedDB</p>
         <div id="indexedDBGraph"></div>
         <div id="webSQLGraph"></div>
+        <p>File API</p>
         <div id="fileAPIGraph"></div>
     </body>
 </html>
