--- a/index.html
+++ b/index.html
@@ -35,5 +35,7 @@
         <div id="webSQLGraph"></div>
         <p>File API</p>
         <div id="fileAPIGraph"></div>
+        <p>WebSQL API</p>
+        <div id="websqlGraph"></div>
     </body>
 </html>
