Average and variance of Web Storage

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <p>Web Storage</p>
         <div id="webStoreGraph">
         </div>
+        <div id="webStoreStats"></div>
         <p>IndexedDB</p>
         <div id="indexedDBGraph"></div>
         <div id="webSQLGraph"></div>
@@ -37,5 +38,6 @@
         <div id="fileAPIGraph"></div>
         <p>WebSQL API</p>
         <div id="websqlGraph"></div>
+        <div id="comparisons"></div>
     </body>
 </html>
