Add average times

--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
     <body>
         <!-- <img id="masterimage" src="http://www.aaoe.fr/public/MC/MC11/Satyrium_XXX.bmp"> -->
         <!-- About 504 KB -->
-            <p>Web Storage</p>
-        <div id="webStoreGraph">
-        </div>
+        <p>Web Storage</p>
+        <div id="webStoreGraph"></div>
         <div id="webStoreStats"></div>
+
         <p>IndexedDB</p>
-        <div id="indexedDBGraph"></div>
-        <div id="webSQLGraph"></div>
+        <div id="indexedDBGraph">IN PROGRESS</div>
+
         <p>File API</p>
-        <div id="fileAPIGraph"></div>
+        <div id="fileAPIGraph">IN PROGRESS</div>
+
         <p>WebSQL API</p>
-        <div id="websqlGraph"></div>
+        <div id="webSQLGraph">IN PROGRESS</div>
+        
         <div id="comparisons"></div>
+
     </body>
 </html>
