--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
         <p>WebSQL API</p>
         <div id="webSQLGraph">IN PROGRESS</div>
         
+        <br>
+        <p>Variance of different API's</p>
         <div id="comparisons"></div>
 
     </body>
