--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
  
     </head>
-    <body>
+    <body style="width: 80%">
         <!-- <img id="masterimage" src="http://www.aaoe.fr/public/MC/MC11/Satyrium_XXX.bmp"> -->
         <!-- About 504 KB -->
         <p>Web Storage</p>
